--- a/views/add_users.ejs
+++ b/views/add_users.ejs
@@ -6,7 +6,7 @@
                 <div class="card-header bg-primary">
                     <h3 class="text-light">Add New User</h3>
                 </div>
-                <div class=""card-body p-4>
+                <div class="card-body p-4">
                     <form action="/add" method="post"id="add-form"enctype="multipart/form-data">
                         <div class="mb-3">
                             <label for="name">Name</label>
@@ -20,10 +20,7 @@
                             <label for="phone">Phone</label>
                             <input type="tel" name="phone" class="form-control form-control-lg" placeholder="Enter phone" required/>
                         </div>
-                        <div class="mb-3">
-                            <label for="image" class="form-label">Select image</label>
-                            <input  class="form-control form-control-lg" type="file" name="image"  required/>
-                        </div>
+                        
                         <div class="mb-3 d-grid">
                             <input type="submit" name="submit"  value="Add user"class="btn btn-primary btn-lg" />
                         </div>
